@@ -8,9 +8,11 @@ Changes - List of significant changes to Devel::NYTProf
 
 =head2 Changes in Devel::NYTProf 4.07
 
-  Fixed html generation to be valid, RT70207 (H.Merijn Brand).
-  Enable file=/dev/null to work as fix for RT74565.
+  Fixed html generation to be valid, RT#70207 (H.Merijn Brand).
+  Enable file=/dev/null to work as fix for RT#74565.
   Added and clarified some notes in the troubleshooting docs.
+  Added warning for Apache2::SizeLimit in ::Apache, RT#75912.
+  Updated ::Apache docs including troubleshooting, RT#75912.
 
 =head2 Changes in Devel::NYTProf 4.06 (svn r1406) 30th Nov 2010
 
